[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "havoc-monkey"
version = "1.0.0"
description = "Deliberate failure injection for data pipelines"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["data", "testing", "chaos-engineering", "pipelines", "ml"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Testing",
  "Programming Language :: Python :: 3",
]
dependencies = ["pandas>=1.5", "numpy>=1.23", "click>=8.0"]

[project.optional-dependencies]
dev = ["pytest>=7", "coverage", "mypy", "hatchling"]

[project.entry-points."pytest11"]
havoc-monkey = "havoc_monkey.plugin"

[project.scripts]
havoc-monkey = "havoc_monkey.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/havoc_monkey"]

[tool.hatch.build.targets.sdist]
exclude = ["docs/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "havoc_monkey: marks a test that runs its own havoc-monkey campaign and attaches the last report to the test output on failure",
]

[tool.coverage.run]
source = ["havoc_monkey"]
